--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -12,7 +12,7 @@ google_analytics: ## Your Google Analytics tracking id, e.g. UA-42425684-2
 baidu_analytics: ## Your Baidu Analytics tracking id, e.g. 8006843039519956000
 show_category_count: false ## If you want to show the count of categories in the sidebar widget please set the value to true.
 toc_number: true ## If you want to add list number to toc please set the value to true.
-shareto: true ## If you want to use the share button please set the value to true.
+shareto: false ## If you want to use the share button please set the value to true.
 busuanzi: true ## If you want to use Busuanzi page views please set the value to true.
 widgets_on_small_screens: false ## Set to true to enable widgets on small screens.
 
@@ -23,9 +23,9 @@ menu:
   - page: archive
     directory: archives/
     icon: fa-archive
-  - page: about
-    directory: about/
-    icon: fa-user
+  - page: email
+    directory: mailto:myicepop@gmail.com
+    icon: fa-envelope
   - page: rss
     directory: atom.xml
     icon: fa-rss
@@ -34,27 +34,6 @@ widgets: ## Six widgets in sidebar provided: search, category, tag, recent_posts
   - search
   - category
   - tag
-  - recent_posts
-  - recent_comments
-  - links
-
-links:
-  - title: site-name1
-    url: http://www.example1.com/
-  - title: site-name2
-    url: http://www.example2.com/
-  - title: site-name3
-    url: http://www.example3.com/
-
-timeline:
-  - num: 1
-    word: 2014/06/12-Start
-  - num: 2
-    word: 2014/11/29-XXX
-  - num: 3
-    word: 2015/02/18-DDD
-  - num: 4
-    word: More
 
 # Static files
 js: js
